# SPDX-FileCopyrightText: d-k-bo <d-k-bo@mailbox.org>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "webdav-methods"
version = "0.1.0"
authors = ["d-k-bo <d-k-bo@mailbox.org>"]
edition = "2021"
description = "HTTP methods for WebDAV"
repository = "https://github.com/d-k-bo/webdav-rs"
license = "MIT OR Apache-2.0"
keywords = ["webdav", "http", "rfc4918", "xml"]
categories = ["network-programming", "web-programming", "filesystem"]

[dependencies]
http = { workspace = true }
once_cell = "1.19.0"
